force-app/main/default/objects/ozbee__Production_Schedule_Item__c/ozbee__Production_Schedule_Item__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >ozbee__Production_Schedule_Layout</compactLayoutAssignment>
    <label>Production Schedule Item</label>
    <nameField>
        <label>Task / Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Schedule Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>