force-app/main/default/objects/ozbee__Production_Schedule_Item__c/fields/SOW_Item__c.field-meta.xml
<CustomField>
    <fullName>SOW_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOW Item</label>
    <referenceTo>SOW_Item__c</referenceTo>
    <relationshipLabel>Production Schedule Items</relationshipLabel>
    <relationshipName>Production_Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>