force-app/main/default/objects/ozbee__Production_Schedule_Item__c/validationRules/Completed_Cant_Be_Greater_Than_Budgeted.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Cant_Be_Greater_Than_Budgeted</fullName>
    <active>true</active>
    <errorConditionFormula
  >Completed__c &gt;  Quantity__c</errorConditionFormula>
    <errorDisplayField>Completed__c</errorDisplayField>
    <errorMessage
  >Completed cannot be greater than budgeted quantity</errorMessage>
</ValidationRule>